--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 #baseURL = 'http://proyectosdwa.es/manuel'
-baseURL = 'http://web.infenlaces.com/certificado/web'
+baseURL = 'https://web.infenlaces.com/certificado/web'
 #baseURL = 'http://localhost:1313/'
 
 languageCode = 'es-es'
